# rfhack

./: LICENSE  README.md  calibration.py  convince.py  four_pillars.ipynb  missForest.csv  paper_pipeline.ipynb  pyproject.toml  results.ipynb  test.py
rfhack/: __init__.py
rfhack/core/: adversarial_hacker.py  auc_utils.py  loaders.py  metrics.py  pair_hacker.py  plots.py  rf_wrapper.py  single_hacker.py
rfhack/data/: generators.py
rfhack/data/results/: calibration.csv
rfhack/models/: gmm.py
