[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "rfhack"
version = "0.1.0"
description = "yep"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest"]